# connector.nvim

./: .gitignore  Cargo.toml  README.md
lua/: connector.lua
lua/connector/: backend.lua  blink.lua  completion.lua  config.lua  ddl.lua  format.lua  history.lua  layouts.lua  sources.lua  util.lua
lua/connector/api/: context.lua  core.lua  init.lua  state.lua  ui.lua
lua/connector/handler/: init.lua
lua/connector/sql/: dialect.lua  generator.lua
lua/connector/ui/: batch_result_tab.lua  buffer_line.lua  call_history.lua  call_log.lua  candies.lua  drawer.lua  editor.lua  float.lua  result.lua  window.lua
plugin/: connector.lua
src/: app.rs  cli.rs  connection.rs  main.rs  protocol.rs  sql.rs  value.rs
src/driver/: clickhouse.rs  duckdb.rs  mod.rs  mongo.rs  mysql.rs  oracle.rs  postgres.rs  redis.rs  sqlite.rs  sqlserver.rs
