[package]
name = "connector-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "connector-backend"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
mysql = "26.0"
postgres = "0.19"
regex = "1.11"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

