[package]
name = "connector-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "connector-backend"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bson = { version = "3.1.0", features = ["serde_json-1"] }
chrono = "0.4"
chrono-tz = "0.8"
clap = { version = "4.5", features = ["derive"] }
clickhouse-rs = "1.1.0-alpha.1"
duckdb = { version = "1.10503.1", features = ["bundled"] }
mongodb = { version = "3.7.0", default-features = false, features = ["sync", "rustls-tls", "dns-resolver", "compat-3-0-0", "bson-3"] }
mysql = "26.0"
oracle-rs = "0.1.7"
postgres = "0.19"
redis = "1.2.2"
regex = "1.11"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiberius = { version = "0.12.3", default-features = false, features = ["rustls", "sql-browser-tokio", "tds73", "tokio"] }
tokio = { version = "1.52", features = ["net", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
url = "2.5"
uuid = "1.23"
